--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -44,9 +47,38 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "com.google.android.material:material:$version_material"
-    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    // Tests
+    // Espresso dependencies
+    testImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    testImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
+    testImplementation 'androidx.test.espresso:espresso-accessibility:3.3.0'
+    testImplementation 'androidx.test.espresso.idling:idling-concurrent:3.3.0'
+    testImplementation 'androidx.test.espresso:espresso-idling-resource:3.4.0-alpha02'
+
+    debugImplementation 'androidx.fragment:fragment-testing:1.2.5'
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'org.mockito:mockito-core:3.2.4'
+    testImplementation 'org.mockito:mockito-inline:3.2.4'
+    testImplementation 'io.mockk:mockk:1.9.3'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.1.0'
+    testImplementation 'org.robolectric:robolectric:4.2.1'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+
+    // Assertions
+    testImplementation 'androidx.test.ext:truth:1.3.0'
+    implementation 'com.google.truth:truth:1.0'
+
+    // Core library
+    testImplementation 'androidx.test:core:1.3.0'
+
+    // AndroidJUnitRunner and JUnit Rules
+    testImplementation 'androidx.test:runner:1.3.0'
+    testImplementation 'androidx.test:rules:1.3.0'
+    testImplementation 'androidx.test.ext:junit:1.1.2'
 
     //coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
